# tool

./: .gitignore  .gitmodules  README.md
Dll2/: .gitignore  Dll2.vcxproj  Dll2.vcxproj.filters  TCalcFuncSets.cpp  TestPluginTCale.cpp  xmake.lua
c_test/: CMakeLists.txt  a.out  libsay_hello.dylib  main.c  main.cpp
c_test3/: CMakeLists.txt  library.h  test.cpp  xmake.lua
calc/: Cargo.toml
code_builder/: build.py  main.go
color/: Cargo.toml
comment-refine/: .gitignore  ConcurrentExecutor.py  Thumbs.db  address.py  build.sh  clean_comments.py  clean_tag.py  config.py  dishes.csv  dishes.py  dishes_config.py  exportPandas.py  image.json  load_name_avatar.py  main.py  main.zom.py  reback_comment_sum.py  shop_map.csv  statistical_shop.py  statistical_tag.py  upload.py  view.py
concurrent_no_lock/: ConcurrentExecutor.py  NoLockExecutor.py  a.csv  a.txt  b.json  main.cpp  test.py  test2.py  test3.py  test4.py  tmp.py  xmake.lua
go_test/: build.sh  main.c  main.go  main.h
k8-help/: Cargo.toml
k8_view/app/: Cargo.toml  config.yaml
k8_view/app/src/: config.rs  main.rs  ssh.rs  view.rs
k8_view/service/: Cargo.toml
k8_view/service/src/: data.rs  http.rs  main.rs  ssh.rs
kube-log/: Cargo.toml
merchant_clean/: back.json  clean.py
pirce/: code.json  execl.py  main.py  rsb.json  test.py  操作记录.xlsx
plugin/: build.sh  main.go
pod_exec/: pod_exec.py
pod_tool/: k8s快捷命令.md  pod_log.py
port-forward/: Cargo.toml  log.py  port.py
pull/: go.mod
rpc-controller/: README.md  main.py
table/: a.drawio
test2/: CMakeLists.txt  main.go
test5/: main.c  (+1 more)
(+75 files in other folders)
