[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced="0.3.0"
ssh2="0.9.3"
anyhow="1.0.44"
lazy_static="1.4.0"
serde={ version = "1.0.130", features = ["derive"] }
serde_yaml="0.8.21"