[package]
name = "k8_view"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2="0.9.1"
anyhow="1.0.44"
serde="1.0.130"
lazy_static="1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]